# nwg-panel-rs

./: .SRCINFO  .gitignore  Cargo.toml  PKGBUILD  README.md
.github/workflows/: release.yml
docs/: DEV_NOTES.md  ROADMAP.md
src/: main.rs
src/modules/: config.rs  controls.rs  hypr_config.rs  hyprland.rs  mod.rs  theme.rs  tray.rs  ui.rs
